# DNS-Threat-Intelligence-dataset

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pages.yml  release.yml  test.yml  update.yml
configs/: allowlist.yml  brands.yml  scoring.yml  sources.yml
data/dashboard/: dataset-stats.json  summary.json
data/enriched/: asn-abuse-summary.csv  certificate-links.csv  ct-candidates.csv  domain-ip-links.csv  domain-risk-features.csv  fast-flux-domains.jsonl  fast-flux-features.csv  ip-asn-enrichment.csv  public-malware-report-iocs.csv  public-malware-report-iocs.jsonl  public-osint-evidence.csv  resolver-risk.csv  source-summary.csv
data/lists/: adguard-dns-filter.txt  c2-domains.txt  c2-ips.txt  ct-brand-impersonation-candidates.txt  ct-suspicious-domains.txt  dga-confirmed-domains.txt  dga-suspected-domains.txt  dns-amplification-risk-resolvers.txt  double-flux-domains.txt  fast-flux-domains.txt  malicious-domains.txt  malicious-ips.txt  malicious-urls.txt  malware-domains.txt  newly-registered-risk-domains.txt  open-resolvers.txt  phishing-domains.txt
data/normalized/: domains.csv  domains.jsonl  urls.jsonl
data/reports/: ct-early-warning-report.md  dataset-stats.md  dga-risk-report.md  (+10 more)
dnsintel/: __init__.py  cli.py  config.py  pipeline.py  stats.py
docs/: active-dns-safety.md  adapter-authoring.md  legal-policy.md  output-schemas.md  scoring.md
scripts/: build_release_assets.py  generate_lists.py  update_feeds.py  update_stats.py
tests/: test_core.py
(+77 files in other folders)
