[project]
name = "dns-threat-intelligence-dataset"
version = "0.1.0"
description = "Legal OSINT DNS threat intelligence dataset, CLI, enrichment engine, and dashboard generator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DNS Threat Intelligence Dataset Maintainers" }]
keywords = ["dns", "threat-intelligence", "osint", "security", "blocklist"]
dependencies = [
  "dnspython>=2.6",
  "duckdb>=1.0",
  "httpx>=0.27",
  "polars>=1.0",
  "pyarrow>=15.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
dnsintel = "dnsintel.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", ".uv-cache", ".supergoal", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
